# uol-orchestrating-ai-models

./: .gitignore  app.py  create_flowchart.py  pyproject.toml
notebooks/: 01_story_gen.ipynb  01_story_gen.py
notebooks/.ipynb_checkpoints/: 01_story_gen-checkpoint.ipynb
scripts/: render_scene.py  sentiment_timeline.py
src/mmstory/: __init__.py  affect.py  config.py  decoding.py  dialogue.py  expand.py  image.py  llm.py  prompts.py  scene.py  schema.py  style.py  utils.py  voice.py
tests/: smoke.py  test_affect.py  test_image.py  test_voice.py
tests/data/: brief.txt  draft_dialogue.txt  prose.txt  scene_plan.json  styled_rewrite.txt
